--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/images/robo-wolves.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
-</head>
+  <title>WIHI Robotics</title>
 
-<body>
-  <div id="app"></div>
   <script type="text/javascript">
     (function (l) {
       if (l.search[1] === '/') {
@@ -22,6 +19,10 @@
       }
     }(window.location))
   </script>
+</head>
+
+<body>
+  <div id="app"></div>
   <script type="module" src="/src/index.js"></script>
 </body>
 
